# tagging_system

./: .gitignore  AGENTS.md  CONTEXT.md  DEPLOY_RENDER.md  README  README.md  build_v2.bat  carton.ui.btw  carton_2.btw  docker-compose.yml  docker_readme  render.yaml  requirements.txt  run_app.bat  run_tests.bat  start_v2.bat
backend/: NY_Tagging_Backend.spec  build_backend.bat  clear_test_data.py  database.py  debug_print.py  fix_reprint_nulls.py  main.py  migrate_btxml.py  migrate_job_order.py  migrate_reprint.py  models.py  print_agent.spec  pyproject.toml  schemas.py  seed.py  seed_full.py
backend_v2/: .dockerignore  Dockerfile  NY_Tagging_System.spec  add_indexes.sql  database.db  export_to_sqlite.py  main.py  migrate_paths.py  pyproject.toml  req.txt  requirements.txt
backend_v2/resources/label_templates/: carton_base.btw
backend_v2/scratch/: debug_path.py  fix_template_types.py  list_routes.py  migrate_station_id.py
backend_v2/src/core/: config.py  database.py  exceptions.py  models.py  utils.py
backend_v2/static/: index.html
backend_v2/static/assets/: CartonHistoryPage-rdxY5SzC.js  CustomerManagementPage-UQ5MNcKO.js  DashboardPage-CUmH-jya.js  LoginPage-B5BnqD5R.js  ProductManagementPage-DA7954Th.js  SNLookupPage-BhAeBPbZ.js  api-BFLTZWg_.js  api-D7NPgpT8.js  box-ByQbCjLs.js  (+14 more)
backend_v2/tests/: test_advanced_scenarios.py  test_box_service.py  test_carton_service.py  test_carton_sn_allocator.py  test_health.py  test_history_service.py  test_job_order.py  test_print_service.py  test_v2_architecture.py
mcp_server/: README.md  pyproject.toml  server.py
(+209 files in other folders)
