[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
    "pywin32>=311",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[project.optional-dependencies]
reload = [
    "uvicorn>=0.44.0",
]
