[project]
name = "backend-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "httpx==0.27.0",
    "pydantic==2.6.3",
    "pydantic-settings==2.2.1",
    "pyodbc==5.1.0",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.28",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.pyright]
extraPaths = ["."]
